# TD_MCP

teradata-mcp-server-main/: .dockerignore  .gitignore  Dockerfile  LICENSE  MANIFEST.in  README.md  docker-compose.yml  env  pyproject.toml  tmp_streamable_http.py
teradata-mcp-server-main/docs/: README.md
teradata-mcp-server-main/docs/client_guide/: CLIENT_GUIDE.md  Claude_desktop.md  Flowise_with_teradata_mcp_Guide.md  Google_Gemini_CLI.md  Google_agentspace.md  MCP_Inspector.md  Microsoft_copilot.md  Open_WebUI.md  Perplexity Desktop.md  Rest_API.md  Visual_Studio_Code.md
teradata-mcp-server-main/docs/developer_guide/: CONTRIBUTING.md  DEVELOPER_GUIDE.md  DOCUMENTATION_STRATEGY.md  HOW_TO_ADD_YOUR_FUNCTION.md  PROMPT_DEFINITION_GUIDELINES.md
teradata-mcp-server-main/docs/server_guide/: ARCHITECTURE.md  CONFIGURATION.md  CUSTOMIZING.md  GETTING_STARTED.md  INSTALLATION.md  QUICK_START.md  QUICK_START_OPEN_WEBUI.md  QUICK_START_VSCODE.md  SECURITY.md  VIDEO_LIBRARY.md
teradata-mcp-server-main/examples/: README.md
teradata-mcp-server-main/examples/app-adk-agent/: README.md  agent.py  requirements.txt
teradata-mcp-server-main/examples/app-agent-builder/: README.md  doc_teradataMCP.md  meta.md
teradata-mcp-server-main/examples/app-agent-builder/Example-outputs/teradata-stats/: teradata-stats-agent.md  teradata-stats-spec.md
teradata-mcp-server-main/examples/app-bedrock-client/: README.md  mcp_chatbot.py  server_config.json
teradata-mcp-server-main/examples/app-flowise/: README.md  docker-compose.yaml  env
teradata-mcp-server-main/examples/app-flowise/flowise_teradata_agents/: Customer_Lifetime_Value_V2.json  Data-exploration_Agents.json  Platform-support_Agents.json  README.md  Teradata_Data_Science_Workflow_Agents_V2.json  Teradata_VectorStore_RAG_Agent_V2.json  Teradata_visualized_Agents_V2.json
teradata-mcp-server-main/examples/app-testing-agent/: README.md  profiles.yml  test_prompt_objects.yml
teradata-mcp-server-main/examples/app-voice-agent/: README.md  mcp_voice_client.py  profiles.yml  requirements.txt
teradata-mcp-server-main/examples/client-claude-desktop/: claude_desktop_SSE_config  claude_desktop_http_config  claude_desktop_stdio_config  claude_desktop_stdio_custom_profile_config
teradata-mcp-server-main/examples/server-api-spec/: copilot_swagger.yaml
teradata-mcp-server-main/examples/server-customisation/: README.md  custom_churn_objects.yml  custom_dba_objects.yml  custom_objects.yml  custom_sales_objects.yml  profiles.yml
teradata-mcp-server-main/examples/server-deployment/: quickstart-aws.md  quickstart-docker.md
teradata-mcp-server-main/examples/server-deployment/docker/: docker-compose.yml  env
teradata-mcp-server-main/examples/server-deployment/docker/site/: index.html  site.webmanifest
teradata-mcp-server-main/src/teradata_mcp_server/: __init__.py  app.py  config_loader.py  middleware.py  server.py  utils.py
teradata-mcp-server-main/src/teradata_mcp_server/config/: __init__.py  chat_config.yml  profiles.yml  rag_config.yml  sql_opt_config.yml
teradata-mcp-server-main/src/teradata_mcp_server/tools/: __init__.py  auth_cache.py  auth_validation.py  constants.py  module_loader.py  td_connect.py
teradata-mcp-server-main/src/teradata_mcp_server/tools/bar/: README.md  __init__.py  bar_objects.yml  bar_resources.py  bar_tools.py  dsa_client.py
teradata-mcp-server-main/src/teradata_mcp_server/tools/base/: README.md  __init__.py  base_objects.yml  base_tools.py
teradata-mcp-server-main/src/teradata_mcp_server/tools/chat/: README.md  __init__.py  chat_objects.yml  (+1 more)
teradata-mcp-server-main/tests/: README.md  run_mcp_tests.py
teradata-mcp-server-main/tests/cases/: analytic_function_test_cases.json  bar_test_cases.json  chat_test_cases.json  core_test_cases.json  fs_test_cases.json  plot_test_cases.json  rag_test_cases.json  tdvs_test_cases.json  test_cases.json
teradata-mcp-server-main/tests/mcp_bench/: .gitignore  README.md  auth_helper.py  mcp_streamable_client.py  requirements.txt  run_perf_test.py
teradata-mcp-server-main/tests/mcp_bench/configs/: cases_error.json  cases_mixed.json  cases_tactical.json  scenario_concurrence.json  scenario_env_example.json  scenario_load.json  scenario_simple.json  scenario_simple_auth.json
teradata-mcp-server-main/tests/scripts/: analytic_functions_setup.py  efs_setup.py  plot_setup.py  tdvs_setup.py
(+25 files in other folders)
